--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>安</title>
+    <title>唐惠安的个人主页</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/stupidtang">View on GitHub</a>
 
-          <h1 id="project_title">Stupidtang.GitHub.com</h1>
-          <h2 id="project_tagline">my online pages</h2>
+          <h1 id="project_title">姓唐，名惠安</h1>
+          <h2 id="project_tagline">不要让这个世界的复杂性阻碍你前进，要成为一个行动主义者。</h2>
 
         </header>
     </div>
@@ -38,6 +38,7 @@
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>copyright by fion@2015</p>
       </footer>
     </div>
 
