--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
+    <link rel="Shortcut Icon" href="images/icon.jpg">
+
     <title>唐惠安的个人主页</title>
   </head>
 
@@ -16,7 +18,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/stupidtang">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/stupidtang">进入我的github仓库</a>
 
           <h1 id="project_title">姓唐，名惠安</h1>
           <h2 id="project_tagline">不要让这个世界的复杂性阻碍你前进，要成为一个行动主义者。</h2>
@@ -38,7 +40,7 @@
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-        <p>copyright by fion@2015</p>
+        <p>Copyright by Fion@2015</p>
       </footer>
     </div>
 
