change page style test

--- a/index.html
+++ b/index.html
@@ -1,50 +1,37 @@
 <!DOCTYPE html>
 <html>
+	
+	<head>
+		<!--所用字符集-->
+		<meta charset='utf-8'>
+		<!--用以声明当前页面用chrome内核来渲染-->
+		<meta http-equiv="X-UA-Compatible" content="chrome=1">
+		<!--网页的描述，是给搜索引擎看的-->
+		<meta name="description" content="Stupidtang.GitHub.com : my online pages">
+		<!--网页默认图标-->
+		<link rel="Shortcut Icon" href="images/icon.jpg">
+		<!--引入样式表-->
+		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+		<!--网页标题-->
+		<title>唐惠安的个人主页</title>
+	</head>
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Stupidtang.GitHub.com : my online pages">
+	<body>
+		<!--HEADER-->
+		<div>
+			<h1>标题</h1>
+		</div>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+		<!--MAIN CONTENT-->
+		<div>
+			<h1>内容</h1>
+		</div>
 
-    <link rel="Shortcut Icon" href="images/icon.jpg">
+		<!--FOOTER-->
+		<div>
+			<h1>尾部</h1>
+		</div>
 
-    <title>唐惠安的个人主页</title>
-  </head>
+	</body>
 
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/stupidtang">进入我的github仓库</a>
-
-          <h1 id="project_title">姓唐，名惠安</h1>
-          <h2 id="project_tagline">不要让这个世界的复杂性阻碍你前进，要成为一个行动主义者。</h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to My home.</h3>
-
-<p>建设中</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-        <p>Copyright by Fion@2015</p>
-      </footer>
-    </div>
-
-    
-
-  </body>
 </html>
