--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <div id="main11">
-      <img src="images/pic.jpg" width="100%" >
+      <img src="images/pic1.jpg" width="100%" >
       <img src="images/pic2.jpg" width="100%" >
     </div>
     <div id="main_content_wrap" class="outer">
