--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <div id="main11">
       <img src="images/pic1.jpg" width="100%" >
       <img src="images/pic2.jpg" width="100%" >
+      <img src="images/pic3.jpg" width="100%" >
     </div>
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
