--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
     <div id="main11">
       <img src="images/pic1.jpg" width="100%" >
+      <img src="images/pic2.jpg" width="100%" >
     </div>
 
 
