--- a/index.html
+++ b/index.html
@@ -32,14 +32,43 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to My home.</h3>
 <p>我，一直在路上</p>
+<p>峨眉山</p>
       </section>
     </div>
 
     <div id="main11">
       <img src="images/pic1.jpg" width="100%" >
       <img src="images/pic2.jpg" width="100%" >
+      <img src="images/pic3.jpg" width="100%" >
     </div>
 
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a></h3>
+    <p>九寨沟</p>
+      </section>
+    </div>
+
+    <div id="main11">
+      <img src="images/pic4.jpg" width="100%" >
+      <img src="images/pic5.jpg" width="100%" >
+      <img src="images/pic6.jpg" width="100%" >
+    </div>
+
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a></h3>
+    <p>西岭雪山</p>
+      </section>
+    </div>
+
+    <div id="main11">
+      <img src="images/pic7.jpg" width="100%" >
+      <img src="images/pic8.jpg" width="100%" >
+      <img src="images/pic9.jpg" width="100%" >
+    </div>
 
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
