修改页面间逻辑，增加西安游记

--- a/general.html
+++ b/general.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/style.css">
         <link rel="Shortcut Icon" href="images/icon.jpg">
         <title>
-            唐惠安的个人主页
+            唐惠安的个人主页-美景图片
         </title>
     </head>
     
@@ -17,22 +17,18 @@
         <!-- HEADER -->
         <div id="header_wrap" class="outer">
             <header class="inner">
-                <a id="forkme_banner" href="https://github.com/stupidtang">
-                    进入我的github仓库
+                <a id="forkme_banner" href="index.html">
+                    返回主页
                 </a>
                 <h1 id="project_title">
-                    姓唐，名惠安
+                    美景，又岂能用图片记录
                 </h1>
                 <h2 id="project_tagline">
-                    不要让这个世界的复杂性阻碍你前进，
-                    <br>
-                    要成为一个行动主义者。
+                    都在我心里，在我脑海里
                 </h2>
-                
             </header>
         </div>
         <!-- MAIN CONTENT -->
-        <!-- 顶部个人名称及签名 -->
         <div id="main_content_wrap" class="outer">
             <section id="main_content" class="inner">
                 <h3>
@@ -41,38 +37,57 @@
                         <span class="octicon octicon-link">
                         </span>
                     </a>
-                    Welcome to My home.
+                    中国 四川 峨眉山
                 </h3>
-                <p>
-                    我，一直在路上
-                </p>
             </section>
         </div>
-        <!-- 个人图片 -->
         <div id="main11">
-          <img src="images/me.jpg" width="30%">
+            <img src="images/pic1.jpg" width="100%">
+            <img src="images/pic2.jpg" width="100%">
+            <img src="images/pic3.jpg" width="100%">
         </div>
-        <!-- 美景链接板块 -->
         <div id="main_content_wrap" class="outer">
             <section id="main_content" class="inner">
                 <h3>
-                    <a href="general.html">美景图片->点击查看更多</a>                
+                    <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"
+                    aria-hidden="true">
+                        <span class="octicon octicon-link">
+                        </span>
+                    </a>
+                    中国 四川 九寨沟
                 </h3>
             </section>
         </div>
         <div id="main11">
-          <img src="images/pic1.jpg" width="50%" >
+            <img src="images/pic4.jpg" width="100%">
+            <img src="images/pic5.jpg" width="100%">
+            <img src="images/pic6.jpg" width="100%">
         </div>
-        <!-- 西安游记板块 -->
         <div id="main_content_wrap" class="outer">
             <section id="main_content" class="inner">
                 <h3>
-                    <a href="xian.html">西安游记->点击查看详情</a>                
+                    <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"
+                    aria-hidden="true">
+                        <span class="octicon octicon-link">
+                        </span>
+                    </a>
+                    中国 四川 西岭雪山
                 </h3>
             </section>
         </div>
         <div id="main11">
-          <img src="images/xian/xian.png" width="50%" >
+            <img src="images/pic7.jpg" width="100%">
+            <img src="images/pic8.jpg" width="100%">
+            <img src="images/pic9.jpg" width="100%">
+        </div>
+        <div id="main_content_wrap" class="outer">
+            <section id="main_content" class="inner">
+                <h3>
+                    <a href="index.html">
+                        返回主页
+                    </a>
+                </h3>
+            </section>
         </div>
         <!-- FOOTER -->
         <div id="footer_wrap" class="outer">
