增加西安游记内容

--- a/xian.html
+++ b/xian.html
@@ -44,7 +44,7 @@
         <div id="header_wrap" class="outer">
             <header class="inner">
                 <h2 id="project_tagline">
-                    day1：钟楼->鼓楼->回民街->古城墙（南门永宁门上下）->回民街->西羊市
+                    day1：回民街->鼓楼->钟楼->古城墙（南门永宁门上下）->回民街->西羊市
                     <hr>
                     <br>
                     day2：大明宫国家遗址公园->陕西历史博物馆->大雁塔->大唐芙蓉园->大雁塔前广场音乐喷泉
@@ -138,6 +138,199 @@
         </div>
         <div id="main11">
             <img src="images/xian/roujiamo.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    玫瑰镜糕，味道不错，有点像广东这边的钵子糕。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/jinggao.png">
+            <img src="images/xian/jinggao2.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    吃饱喝足后，离开回民街，一出来就是【鼓楼】.不远处，与之呼应的【钟楼】，所谓晨钟暮鼓。这两个景点上去都是要钱的，跟小伙伴商量了下，觉得没必要上去，还是远观一下好了。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/gulou.png">
+            <img src="images/xian/zhonglou.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    再往南走几分钟，我们来到西安南面的城墙，【永宁门】，正好赶上有一个古装表演，前面几位长发飘飘妹纸大口说着粤语，一听就有亲切感，肯定是广东那边过来旅游的，全国哪里都不缺旅游的广东人-，-
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/yongningmen.png">
+            <img src="images/xian/yongningmen2.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    买了票（学生半价好像是40还是50）登上古城墙后，果断租了辆自行车(好像是押金1人200元,租金1人2小时40元)，绕城踩一圈，玩玩拍拍照，2小时！
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/yongningmen3.png">
+            <img src="images/xian/zixingche.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    然后就开始骑行啦！由于是淡季，人很少，太爽了，宽度大概是双向四车道。内城的建筑风格古色古香，外城还有护城河，古代人真实机智，攻下一个城还真不是那么容易的。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/chengqiang.png">
+            <img src="images/xian/chengqiang2.png">
+            <img src="images/xian/chengqiang3.png">
+            <img src="images/xian/chengqiang4.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    It's me！
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/chengqiang5.png">
+            <img src="images/xian/chengqiang6.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    还是城墙，各种角度。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/chengqiang7.png">
+            <img src="images/xian/chengqiang8.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    不知不觉，已经黄昏了。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/chengqiang9.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    在城墙上看西安火车站人来人往。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/chengqiang10.png">
+            <img src="images/xian/chengqiang11.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    夜幕降临，亮起了灯饰和红灯笼。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/chengqiang12.png">
+            <img src="images/xian/chengqiang13.png">
+            <img src="images/xian/chengqiang14.png">
+            <img src="images/xian/chengqiang15.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    毕竟那么长时间了，这裂缝。。。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/chengqiang16.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    晚上还是决定再回【回民街】吃东西！
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/huiminjie2.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    biangbiang面！打不出这字啊！
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/biangbiangmian.png">
+            <img src="images/xian/biangbiangmian2.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    听大学一西安同学推荐，大串烧烤羊肉串+冰峰饮料（本地品牌够味！有点广东人对沙士的情怀。）
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/yangrouchuan.png">
+            <img src="images/xian/bingfeng.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    接着走进【西羊市】，跟回民街垂直的一条街，很长走不到头。那是切糕吗？！不管了，我吃到切糕了！还有中国最古老的乐器埙（念xun）。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/qiegao.png">
+            <img src="images/xian/xun.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    好大的陕北狗头枣！果断买了两袋，肉多结实甜！好大的石子馍！（咳咳，这个看看就好了）
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/goutouzao.png">
+            <img src="images/xian/shizimo.png">
+        </div>
+        <hr>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    第二天一早就坐车来【大明宫】国家遗址公园了，果真是遗址，地方老大，就剩下些土堆是真品！据说准备花很多钱重建。看到那个河面没有，早上结了一层薄冰的！
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/daminggong.png">
+            <img src="images/xian/daminggong2.png">
+            <img src="images/xian/daminggong3.png">
+            <img src="images/xian/daminggong4.png">
+            <img src="images/xian/daminggong5.png">
+            <img src="images/xian/daminggong6.png">
         </div>
         <div id="main_content_wrap" class="outer">
             <section id="main_content" class="inner">
