Revert "增加西安游记内容，至白天大雁塔"
This reverts commit beb90beb9f61f4a37c89b0dfbe4dbb3cd7fb7dc4.

--- a/xian.html
+++ b/xian.html
@@ -320,17 +320,7 @@
         <div id="header_wrap" class="outer">
             <header class="inner">
                 <h2 id="project_tagline">
-                    第二天早餐，胡辣汤。
-                </h2>
-            </header>
-        </div>
-        <div id="main11">
-            <img src="images/xian/hulatang.png">
-        </div>
-        <div id="header_wrap" class="outer">
-            <header class="inner">
-                <h2 id="project_tagline">
-                    吃完后坐车来【大明宫】国家遗址公园，果真是遗址，地方老大，就剩下些土堆是真品！据说准备花很多钱重建。看到那个河面没有，早上结了一层薄冰的！
+                    第二天一早就坐车来【大明宫】国家遗址公园了，果真是遗址，地方老大，就剩下些土堆是真品！据说准备花很多钱重建。看到那个河面没有，早上结了一层薄冰的！
                 </h2>
             </header>
         </div>
@@ -341,71 +331,6 @@
             <img src="images/xian/daminggong4.png">
             <img src="images/xian/daminggong5.png">
             <img src="images/xian/daminggong6.png">
-        </div>
-        <div id="header_wrap" class="outer">
-            <header class="inner">
-                <h2 id="project_tagline">
-                    正好又赶上古装表演，大唐盛世。
-                </h2>
-            </header>
-        </div>
-        <div id="main11">
-            <img src="images/xian/daminggong7.png">
-            <img src="images/xian/daminggong8.png">
-            <img src="images/xian/daminggong9.png">
-            <img src="images/xian/daminggong10.png">
-            <img src="images/xian/daminggong11.png">
-            <img src="images/xian/daminggong12.png">
-        </div>
-        <div id="header_wrap" class="outer">
-            <header class="inner">
-                <h2 id="project_tagline">
-                    要是大明宫还在的话，是比北京故宫还大的呀。
-                </h2>
-            </header>
-        </div>
-        <div id="main11">
-            <img src="images/xian/daminggong13.png">
-        </div>
-        <div id="header_wrap" class="outer">
-            <header class="inner">
-                <h2 id="project_tagline">
-                    中午坐车去【陕西历史博物馆】，凭身份证排队免费领票的（有专门黄牛拿了不少票，10元1张说不用排队，但其实淡季完全没必要，估计旺季还是能卖出不少），好像是一天4000张，中午12点到1点半休息不发票。我去到还没到下午发票时间，就先去吃中，没错又是吃面！
-                </h2>
-            </header>
-        </div>
-        <div id="main11">
-            <img src="images/xian/mian.png">
-            <img src="images/xian/mian2.png">
-        </div>
-        <div id="header_wrap" class="outer">
-            <header class="inner">
-                <h2 id="project_tagline">
-                    拿票后就进去了！要个讲解员还是很必要的，100元1个讲解员，最多带10个人，我就是和别人拼的，平均下来1个人才10元。给我们讲解的是个不错的妹纸，声音好甜，后来走的时候才发现居然是个大二的学妹！在本地念大学，放假来做兼职，我后悔没要联系方式了心塞！TAT！里面就是各种有趣的东西啦，自己看看吧。
-                </h2>
-            </header>
-        </div>
-        <div id="main11">
-            <img src="images/xian/shanbo.png">
-            <img src="images/xian/shanbo2.png">
-            <img src="images/xian/shanbo3.png">
-            <img src="images/xian/shanbo4.png">
-            <img src="images/xian/shanbo5.png">
-            <img src="images/xian/shanbo6.png">
-            <img src="images/xian/shanbo7.png">
-        </div>
-        <div id="header_wrap" class="outer">
-            <header class="inner">
-                <h2 id="project_tagline">
-                    从博物馆出来后，就往【大雁塔】走了，没多远，几分钟就到了。广场很大，喷泉很壮观，晚上会更加漂亮。
-                </h2>
-            </header>
-        </div>
-        <div id="main11">
-            <img src="images/xian/dayanta.png">
-            <img src="images/xian/dayanta2.png">
-            <img src="images/xian/dayanta3.png">
-            <img src="images/xian/dayanta4.png">
         </div>
         <div id="main_content_wrap" class="outer">
             <section id="main_content" class="inner">
