--- a/xian.html
+++ b/xian.html
@@ -407,6 +407,154 @@
             <img src="images/xian/dayanta3.png">
             <img src="images/xian/dayanta4.png">
         </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    稍待片刻后，步行前往【大唐芙蓉园】，是为了展示当时大唐盛世状况的主题公园，公园比较大，有很多还原当时场景的古装表演。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/furongyuan.png">
+            <img src="images/xian/furongyuan2.png">
+            <img src="images/xian/furongyuan3.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    园区大概是环状，我们绕圈一个个景点去，首先来到的是【仕女馆】，在这看到的是“民间选秀女”表演。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/shinvguan.png">
+            <img src="images/xian/shinvguan2.png">
+            <img src="images/xian/shinvguan3.png">
+            <img src="images/xian/shinvguan4.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    仕女馆里有个塔，登顶观赏，风景也不错。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/shinvguan5.png">
+            <img src="images/xian/shinvguan6.png">
+            <img src="images/xian/shinvguan7.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    仕女馆背后有个巨型秋千，小伙伴都快把我扔飞了，还是碰不到那个球，爽是爽，把我吓得半死。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/qiuqian.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    这个好像是巡逻骑兵，绕园游行的。马匹非常高大、壮硕。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/qibing.png">
+            <img src="images/xian/qibing2.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    步入黄昏，景色还是不错，园中央有个大湖就是怡人。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/furongyuanjing.png">
+            <img src="images/xian/furongyuanjing2.png">
+            <img src="images/xian/furongyuanjing3.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    一个小剧场演戏剧，表示我欣赏不来。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/juchang.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    接下来【****前方高能预警****】，本想凑热闹看那些人在干嘛，结果被稀里糊涂抓来当客串表演的【新郎】还拜堂成亲！！！！！被戏耍了一通！！还好最后翻开头巾的妹纸还不错，就当免费租古装服拍照吧23333333
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/gaoneng.png">
+            <img src="images/xian/gaoneng2.png">
+            <img src="images/xian/gaoneng3.png">
+            <img src="images/xian/gaoneng4.png">
+            <img src="images/xian/gaoneng5.png">
+            <img src="images/xian/gaoneng6.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    还是回到现代的我吧O(∩_∩)O，这里是园区中心的紫云楼。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/ziyunlou.png">
+            <img src="images/xian/ziyunlou2.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    再随便逛逛就入夜了，走出园区，外面有个楼好多鸽子！返回【大雁塔】附近，先解决晚餐，就准备看【音乐喷泉】了。晚餐在一个连锁快餐店，没错也是主打肉夹馍和面食。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/datangye.png">
+            <img src="images/xian/datangye2.png">
+            <img src="images/xian/datangye3.png">
+            <img src="images/xian/datangye4.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    重头戏开始了！音乐喷泉每天晚上8点30分开始，持续30分钟。喷泉随音乐律动，大雁塔就在后方，古代与现代交融，身临其境，有一种特别的感受，你们有机会自己来体会一下吧。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/penquan.png">
+            <img src="images/xian/penquan2.png">
+            <img src="images/xian/penquan3.png">
+            <img src="images/xian/penquan4.png">
+            <img src="images/xian/penquan5.png">
+            <img src="images/xian/penquan6.png">
+            <img src="images/xian/penquan7.png">
+            <img src="images/xian/penquan8.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    喷泉结束，一切恢复平静，人也散去了，这天行程也标志着结束了。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/penquanhou.png">
+        </div>
+        <hr>
+        
         <div id="main_content_wrap" class="outer">
             <section id="main_content" class="inner">
                 <h3>
