西安游记结束

--- a/xian.html
+++ b/xian.html
@@ -554,6 +554,127 @@
             <img src="images/xian/penquanhou.png">
         </div>
         <hr>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    第三天，离开西安市区，去常说的东线游，即【华清池+兵马俑】。在火车站东广场有正规大巴去的，8元到华清池，上车才给钱的。1个多小时就到了华清池。到时去兵马俑在下车地上车前往，10几分钟就可到。一下车就可以看到李隆基和杨玉环的雕塑。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/huaqingchi.png">
+            <img src="images/xian/huaqingchi2.png">
+            <img src="images/xian/huaqingchi3.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    进入景区，也可以租个讲解员，也是和别人凑的，人均也是10元1人，听一下还是挺有必要的。大型情景舞台剧“梦回大唐”也在这里上演，只不过冬季休演来维修舞台。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/huaqingchi4.png">
+            <img src="images/xian/huaqingchi5.png">
+            <img src="images/xian/huaqingchi6.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    华清池，很多人来最主要看的其实就是当年李隆基为杨贵妃弄的浴池以及他自己的浴池，都很有讲究的，只能说古人太“会玩”。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/yuchi.png">
+            <img src="images/xian/yuchi2.png">
+            <img src="images/xian/yuchi3.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    有专门的出水口，和引流，其中3号出水口现在还在一直有热水，亲自感受了下还是挺热的。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/erhaochushui.png">
+            <img src="images/xian/erhaochushui2.png">
+            <img src="images/xian/yihaochushui.png">
+            <img src="images/xian/sanhaochushui.png">
+            <img src="images/xian/sanhaochushui2.png">
+            <img src="images/xian/sanhaochushui3.png">
+            <img src="images/xian/yinliu.png">
+            <img src="images/xian/yinliu2.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    老蒋当年也来这里，而且就在这里发生了“西安事变”。当时老蒋在卧室，听到枪声后，就从后窗跳出，一溜小跑到骊山上去了。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/xianshibian.png">
+            <img src="images/xian/xianshibian2.png">
+            <img src="images/xian/xianshibian3.png">
+            <img src="images/xian/xianshibian4.png">
+            <img src="images/xian/xianshibian5.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    最后来这里看了个6d电影，还不错，不用买票，排队等候即可，一场30分钟左右。他这个电影是银幕加人现场演的，而且每个场景在不同楼层，你边看边要转换场景。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/6ddianying.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    出来后又坐车去【兵马俑】，在附近吃了饭，来西安的第一顿饭！之前都是面食。在那种农家乐里，点了80元套餐，4菜1汤，4个人吃的干干净净，味道不错，价格不贵。之后就走去售票厅了，这里千万要小心，很多黑车说距离很远要你坐个车，后来听正规导游说很可能把你拉到不知道哪个地方给些假的给你看，所以还是不要随便听别人的，按照指示牌走几分钟就到了。同样凑人租导游，人均10元。主要有博物馆和3个坑馆，每个馆是不同兵种。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/bingmayong.png">
+            <img src="images/xian/bingmayong2.png">
+            <img src="images/xian/bingmayong3.png">
+            <img src="images/xian/bingmayong4.png">
+            <img src="images/xian/bingmayong5.png">
+            <img src="images/xian/bingmayong6.png">
+            <img src="images/xian/bingmayong7.png">
+            <img src="images/xian/bingmayong8.png">
+            <img src="images/xian/bingmayong9.png">
+            <img src="images/xian/bingmayong10.png">
+            <img src="images/xian/bingmayong11.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    接下来是单个俑的展示，可以看到是很精细的，手上掌纹都有，教下的鞋纹也弄的很真实。
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/yong.png">
+            <img src="images/xian/yong2.png">
+            <img src="images/xian/yong3.png">
+            <img src="images/xian/yong4.png">
+            <img src="images/xian/yong5.png">
+        </div>
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+                <h2 id="project_tagline">
+                    晚上坐车回去，西安的旅程就暂告一段落了！
+                </h2>
+            </header>
+        </div>
+        <div id="main11">
+            <img src="images/xian/zaijianxian.png">
+        </div>
         
         <div id="main_content_wrap" class="outer">
             <section id="main_content" class="inner">
