--- a/index.html
+++ b/index.html
@@ -8,6 +8,172 @@
         <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
         <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/style.css">
         <link rel="Shortcut Icon" href="images/icon.jpg">
+        <!-- 引入微信api -->
+        <script type="text/javascript" src="javascripts/weixin.js"></script>
+        <script type="text/javascript">
+
+        // 开启Api的debug模式
+        WeixinApi.enableDebugMode();
+
+        // 给按钮增加click事件：请不要太纠结这个写法，demo而已
+        var addEvent = function(elId,listener){
+            document.getElementById(elId)
+                    .addEventListener('click',function(e){
+                        if(!window.WeixinApi || !window.WeixinJSBridge) {
+                            alert('请确认您是在微信内置浏览器中打开的，并且WeixinApi.js已正确引用');
+                            e.preventDefault();
+                            return false;
+                        }
+                        listener(this,e);
+                    },false);
+        };
+
+        // 两个Flag
+        var optionMenuOn = true;
+        var toolbarOn = true;
+
+        // optionMenu的控制
+        addEvent('optionMenu',function(el,e){
+            if(optionMenuOn) {
+                el.innerHTML = "WeixinApi.showOptionMenu";
+                WeixinApi.hideOptionMenu();
+            }else{
+                el.innerHTML = "WeixinApi.hideOptionMenu";
+                WeixinApi.showOptionMenu();
+            }
+            optionMenuOn = !optionMenuOn;
+        });
+
+        // 获取网络类型
+        addEvent('networkType',function(el,e){
+            WeixinApi.getNetworkType(function(network) {
+                alert("当前网络类型：" + network);
+            });
+        });
+
+        // 调起客户端的图片播放组件
+        addEvent('imagePreview',function(el,e){
+            location.href = "http://www.baidufe.com/wximage?tag=%E7%BE%8E%E5%A5%B3";
+        });
+
+        // 关闭窗口
+        addEvent('closeWindow',function(el,e){
+            WeixinApi.closeWindow({
+                success : function(resp){
+                    alert('关闭窗口成功！');
+                },
+                fail : function(resp){
+                    alert('关闭窗口失败');
+                }
+            });
+        });
+
+        // 打开扫码
+        addEvent('scanQRCode',function(el,e){
+            WeixinApi.scanQRCode({
+                success : function(resp){
+                    alert('扫描器已打开！');
+                },
+                fail : function(resp){
+                    alert('扫描器无法打开');
+                }
+            });
+        });
+
+        // 判断是否安装对应的应用（需要官方打开权限）
+        addEvent("getInstallState", function(el, e) {
+            WeixinApi.getInstallState({
+                packageName: "cn.dxy.android.aspirin",
+                packageUrl: "dxy-aspirin"
+            }, {
+                success: function(resp) {
+                    alert("App is installed, version " + resp.version);
+                },
+                fail: function(resp) {
+                    alert("Oops, something goes wrong or app is not installed.");
+                }
+            })
+        });
+
+        // 发送邮件
+        addEvent("sendEmail", function(el, e) {
+            WeixinApi.sendEmail({
+                subject : 'Hello world！',
+                body : '这是一封测试邮件，Demo而已，慢慢玩儿吧！'
+            });
+        });
+
+        // 刷新
+        addEvent('refresh',function(el,e){
+            e.preventDefault();
+            location.replace('?' + Math.random(),true);
+        });
+
+        // 需要分享的内容，请放到ready里
+        WeixinApi.ready(function(Api) {
+
+            // 微信分享的数据
+            var wxData = {
+                "appId": "", // 服务号可以填写appId
+                "imgUrl" : 'http://www.baidufe.com/fe/blog/static/img/weixin-qrcode-2.jpg',
+                "link" : 'http://www.baidufe.com',
+                "desc" : '大家好，我是Alien，Web前端&Android客户端码农，喜欢技术上的瞎倒腾！欢迎多交流',
+                "title" : "Hello，我是Alien"
+            };
+
+            // 分享的回调
+            var wxCallbacks = {
+                // 关闭favorite
+                favorite:false,
+
+                // 分享操作开始之前
+                ready : function() {
+                    // 你可以在这里对分享的数据进行重组
+                    alert("准备分享");
+                },
+                // 分享被用户自动取消
+                cancel : function(resp) {
+                    // 你可以在你的页面上给用户一个小Tip，为什么要取消呢？
+                    alert("分享被取消，msg=" + resp.err_msg);
+                },
+                // 分享失败了
+                fail : function(resp) {
+                    // 分享失败了，是不是可以告诉用户：不要紧，可能是网络问题，一会儿再试试？
+                    alert("分享失败，msg=" + resp.err_msg);
+                },
+                // 分享成功
+                confirm : function(resp) {
+                    // 分享成功了，我们是不是可以做一些分享统计呢？
+                    alert("分享成功，msg=" + resp.err_msg);
+                },
+                // 整个分享过程结束
+                all : function(resp,shareTo) {
+                    // 如果你做的是一个鼓励用户进行分享的产品，在这里是不是可以给用户一些反馈了？
+                    alert("分享" + (shareTo ? "到" + shareTo : "") + "结束，msg=" + resp.err_msg);
+                }
+            };
+
+            // 用户点开右上角popup菜单后，点击分享给好友，会执行下面这个代码
+            Api.shareToFriend(wxData, wxCallbacks);
+
+            // 点击分享到朋友圈，会执行下面这个代码
+            Api.shareToTimeline(wxData, wxCallbacks);
+
+            // 点击分享到腾讯微博，会执行下面这个代码
+            Api.shareToWeibo(wxData, wxCallbacks);
+
+            // iOS上，可以直接调用这个API进行分享，一句话搞定
+            Api.generalShare(wxData,wxCallbacks);
+
+            // 有可能用户是直接用微信“扫一扫”打开的，这个情况下，optionMenu、toolbar都是off状态
+            // 为了方便用户测试，我先来trigger show一下
+            // optionMenu
+            var elOptionMenu = document.getElementById('optionMenu');
+            elOptionMenu.click(); // 先隐藏
+            elOptionMenu.click(); // 再显示
+        });
+
+    </script>
         <title>
             唐惠安的个人主页
         </title>
